<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NovoAlunoActivity">

    <EditText
        android:id="@+id/idEdtnuCPFAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/digite_o_cpf_do_aluno" />

    <EditText
        android:id="@+id/idEdtnoAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/digite_o_nome_do_aluno" />

    <Button
        android:id="@+id/idBtnSalvarAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:hint="@string/salvar"
        android:textAllCaps="false"/>

</LinearLayout>